Updated User Guide

--- a/docs/TreeSearchUserGuide.tex
+++ b/docs/TreeSearchUserGuide.tex
@@ -18,11 +18,11 @@
 
 \def\TreeSearch{{TreeSearch}}
 
-\title{{\TreeSearch} User Guide\\ {\large Version 0.9}}
+\title{{\TreeSearch} User Guide\\ {\large Version 1.0}}
 
 \author{Derrick Stolee \\ 
-	University of Nebraska-Lincoln\\ 
-	\texttt{s-dstolee1@math.unl.edu}
+	Iowa State University\\ 
+	\texttt{dstolee@iastate.edu}
        }
        
 \begin{document}
@@ -116,10 +116,10 @@ With the assumption that each subtree is computationally independent of other su
 	one can run each subtree in a different process in order to achieve parallelization.
 These path descriptions make up the input for the specific processes in this scheme.
 
-\begin{floatingfigure}{3in}\centering
+\begin{figure}\centering
 	\includegraphics[width=3in]{figures/Jobs}
 	\caption{\label{fig:jobs}A partial job description.}
-\end{floatingfigure}
+\end{figure}
 
 
 Each path to a search node qualifies as a single job, where the goal 
